restful-go-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restful-go-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restful-go-api
  template:
    metadata:
      labels:
        app: restful-go-api
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: restful-go-api
        image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: restful-go-api
spec:
  ports:
  - port: 6379
  selector:
    app: restful-go-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restful-go-api-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restful-go-api-front
  template:
    metadata:
      labels:
        app: restful-go-api-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: restful-go-api-front
        image: whitneyscontainerregistry007.azurecr.io/restful-go-api
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: restful-go-api-front
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: restful-go-api-front
